--- a/package.xml
+++ b/package.xml
@@ -7,13 +7,13 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="hasan@todo.todo">hasan</maintainer>
+  <maintainer email="hasan.elhussein.97@gmail.com">hasan-elhuseyin</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>MIT License</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
